--- a/src/partials/header/parts/actions.html
+++ b/src/partials/header/parts/actions.html
@@ -1,5 +1,9 @@
 <div class="actions">
-  <button type="button" class="btn-def alt openModal" data-id="idRegistr">
+  <button
+    type="button"
+    class="btn-def bg-yell alt openModal"
+    data-id="idRegistr"
+  >
     Зареєструватися
   </button>
 </div>
