--- a/src/partials/home/about.html
+++ b/src/partials/home/about.html
@@ -75,7 +75,7 @@
 
             <button
               type="button"
-              class="btn-def wide openModal"
+              class="btn-def bg-yell wide openModal"
               data-id="idRegistr"
             >
               Зареєструватися
