--- a/src/partials/home/case.html
+++ b/src/partials/home/case.html
@@ -16,7 +16,7 @@
           <h2 class="tl2">Бажаєш подати свій кейс на конференцію?</h2>
           <p class="case__subtl">Заповнюй форму!</p>
 
-          <a href="#" class="btn-def wide">Подати кейс</a>
+          <a href="#" class="btn-def bg-yell wide">Подати кейс</a>
         </div>
       </div>
     </div>
