--- a/src/partials/home/connect.html
+++ b/src/partials/home/connect.html
@@ -1,7 +1,7 @@
 <section class="connect" id="connect">
   <div class="connect__container">
     <div class="connect__heading">
-      <h2 class="tl1">Контакти</h2>
+      <h2 class="connect__tl">Контакти</h2>
     </div>
   </div>
 
@@ -24,14 +24,21 @@
         </div>
 
         <div class="connect__content">
-          <h3 class="tl3 cw">Приєднуйтесь до нас</h3>
+          <h3 class="tl3 cw">
+            «HR Marketing & Employer Branding Conference” — організована групою
+            компаній “Because Talents Matter”.
+          </h3>
+
+          <div class="connect__txt">
+            <p>
+              За 11 років на ринку під брендом компанії було організовано більше
+              30 профільних заходів, в тому числі міжнародних. Серед яких:
+              Global IT HR Forum, HR Innovation Summit, Sourcing Day, Upgrade
+              Week, Конференція для ТОПів. Географія учасників: 25 країн.
+            </p>
+          </div>
+
           <address class="connect__address">
-            <div class="connect__logo">
-              <p>Організатор</p>
-              <a href="./index.html">
-                <img src="./img/icons/logo.svg" alt="Logo" />
-              </a>
-            </div>
             <div class="connect__box">
               <p>Phone</p>
               <a href="tel:+380956878086">
