--- a/src/partials/home/useful.html
+++ b/src/partials/home/useful.html
@@ -1,64 +1,44 @@
 <section class="useful">
   <div class="useful__container">
     <div class="useful__wrapp">
-      <div class="useful__corner no-select" aria-hidden="true">
+      <div class="useful__corner1 no-select" aria-hidden="true">
         <img src="./img/decor/fltr_corner.svg" alt="" />
       </div>
-      <div class="useful__circle no-select" aria-hidden="true">
+      <div class="useful__circle1 no-select" aria-hidden="true">
         <img src="./img/decor/fltr_circle.svg" alt="" />
       </div>
 
+      <div class="useful__corner2 no-select" aria-hidden="true">
+        <img src="./img/decor/fltr_corner.svg" alt="" />
+      </div>
+      <div class="useful__circle2 no-select" aria-hidden="true">
+        <img src="./img/decor/fltr_circle.svg" alt="" />
+      </div>
+
+      <div class="useful__corner3 no-select" aria-hidden="true">
+        <img src="./img/decor/fltr_corner2.svg" alt="" />
+      </div>
+
+      <div class="useful__img no-select" aria-hidden="true">
+        <img src="./img/decor/dec_5.png" alt="" />
+      </div>
+
       <div class="useful__body">
-        <div class="useful__heading">
-          <h2 class="useful__tl">
-            Для кого<br />
-            буде корисно
-          </h2>
+        <h2 class="useful__tl">
+          Для кого<br />
+          буде корисно
+        </h2>
+        <h3 class="useful__subtl">
+          Якщо ви розвиваєте бренд роботодавця, комунікації, культуру,
+          рекрутмент-маркетинг чи інші точки дотику з командою і кандидатами —
+          вам сюди.
+        </h3>
+        <div class="useful__txt">
+          <p>
+            Ви можете бути Employer Brand або HR фахівцем, комунікаційником,
+            рекрутером — важливо одне: ви будуєте бренд і створюєте зміни.
+          </p>
         </div>
-        <ul class="useful__list">
-          <li>
-            <span class="no-select">
-              <img src="./img/icons/useful_1.svg" alt="" />
-            </span>
-            <h3>Employer Brand Manager</h3>
-          </li>
-          <li>
-            <span class="no-select">
-              <img src="./img/icons/useful_2.svg" alt="" />
-            </span>
-            <h3>HR Meнеджер</h3>
-          </li>
-          <li>
-            <span class="no-select">
-              <img src="./img/icons/useful_3.svg" alt="" />
-            </span>
-            <h3>Рекрутер</h3>
-          </li>
-          <li>
-            <span class="no-select">
-              <img src="./img/icons/useful_4.svg" alt="" />
-            </span>
-            <h3>HR Marketing Manager</h3>
-          </li>
-          <li>
-            <span class="no-select">
-              <img src="./img/icons/useful_5.svg" alt="" />
-            </span>
-            <h3>Recruitment Marketing Manager</h3>
-          </li>
-          <li>
-            <span class="no-select">
-              <img src="./img/icons/useful_6.svg" alt="" />
-            </span>
-            <h3>People Partner</h3>
-          </li>
-          <li>
-            <span class="no-select">
-              <img src="./img/icons/useful_7.svg" alt="" />
-            </span>
-            <h3>PR менеджер</h3>
-          </li>
-        </ul>
       </div>
     </div>
   </div>
