--- a/src/partials/thank/thank.html
+++ b/src/partials/thank/thank.html
@@ -18,7 +18,7 @@
         </div>
         <h2 class="tl3">Бажаєте оплатити замовлення зараз?</h2>
         <div class="thank__btns">
-          <a href="./index.html" class="btn-def">Оплатити зараз</a>
+          <a href="./index.html" class="btn-def bg-yell">Оплатити зараз</a>
           <a href="./index.html" class="btn-def trnspr">
             Повернутися на головну
           </a>
