--- a/src/partials/home/commit.html
+++ b/src/partials/home/commit.html
@@ -38,6 +38,14 @@
                   Лідерка Employer Branding Community UA, викладачка курсу «HR
                   Marketing» на Laba
                 </p>
+                <ul>
+                  <li>
+                    adasdasd
+                  </li>
+                  <li>
+                    asdasdasd
+                  </li>
+                </ul>
               </div>
               <div class="commit__soc evidn-soc">
                 <ul>
